--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,11 +3,12 @@
 // Color overrides
 
 // Set a custom color
-$orange: #f4623a !default;
 $brown: #5c4d42 !default;
+$purple: #6f42c1!default;
+$yellow: #F7D212 !default;
 
 // Set primary color to orange
-$primary: $orange !default;
+$primary: $yellow !default;
 
 // Font overrides
 $font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
