--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -30,3 +30,9 @@ header.masthead {
     }
   }
 }
+img.avatar {
+  vertical-align: middle;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
