--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -4,7 +4,7 @@ header.masthead {
   padding-bottom: calc(10rem - #{$navbar-height});
   // replace the masthead.jpg image in the /img directory to change the image
   // if the image name change, make sure to update the url path below!
-  background: linear-gradient(to bottom, #{fade-out($purple, .2)} 0%,#{fade-out($black, .2)} 100%), url('https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+  background: linear-gradient(to bottom, #{fade-out($white, .2)} 0%,#{fade-out($black, .2)} 100%), url('https://images.unsplash.com/photo-1534665482403-a909d0d97c67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
